--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,8 @@
+@import "utilities/variables";
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -29,8 +34,8 @@ body{
 
                 .imagen{
                     margin-left: 5mm;
-                    height: 90px;
-                    width: 90px;
+                    @include tamaño(90px, 90px);
+                    
                 }
                 
                 //pongo  en blanco el boton que se desliza//
@@ -54,14 +59,14 @@ body{
             grid-area: h1;
             text-align: center;
             font-family:'Times New Roman', Times, serif;
-            font-size: 20px;  
+            font-size: $fontSizePromedioCelular+11px;  
         }
         h2{
         
             grid-area: h2;
             text-align: center;
             font-family:'Times New Roman', Times, serif;
-            font-size: 16px;
+            font-size: $fontSizePromedioCelular+4px;
         }
         main{
             grid-area: main;
@@ -69,11 +74,10 @@ body{
             margin-bottom: 10px;
             border: 3px solid black;
         
-            height: 400px;
-            width: 300px;
-        
-            margin-left: auto;
-            margin-right: auto;
+            @include tamaño(300px, 400px);
+
+            @include autoEmparejamiento;
+
             overflow: auto; 
         
             background-color: rgb(195, 155, 211 );
@@ -86,7 +90,7 @@ body{
                 padding: 10px;
                 background-color: rgb(221, 221, 250); 
                 border: 3px dashed black;
-                font-size: 12px
+                font-size: $fontSizePromedioCelular;
             
             }
         }//fin de las noticias recientes//
@@ -111,7 +115,7 @@ body{
                 align-items: center;
 
                 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-                font-size: 12px;
+                font-size: $fontSizePromedioCelular;
 
                 border-top: 3px solid rgb(51, 51, 0);
                 background-color: rgb(177, 129, 221);
@@ -119,20 +123,15 @@ body{
                 .subPieDePagina{ //los datos sobre ubicacion y numeros (todo menos redes)//
                     padding: 5px;
                     iframe{
-                        height: 150px;
-                        width: 300px;
+                        @include tamaño(300px, 150px);
                     }
                 }
 
                 .redes{//los links a redes sociales//
 
-                    display: flex;
-                    flex-flow: row wrap;
-                    justify-content: center;
-                    align-items: center;
+                    @include flexCentroCentro;
                     
-                    margin-left: auto;
-                    margin-right: auto;
+                    @include autoEmparejamiento;
 
                     .subRedes{//los contenedores de fotos//
 
@@ -140,27 +139,27 @@ body{
                         justify-content: center;
                         align-items: center;
                                 
-                        width: 2cm;
-                        height: 1cm;
+                        @include tamaño(2cm, 1cm);
 
                         margin: 0px 10px 10px;    
 
-                        background-color: rgb(213, 227, 255);
-                        border: 5px ridge rgb(186, 253, 255);
 
-                        font-size: 13px;
+                        background-color: map-get($map: $botonRedes, $key: fondoRedes);
+                        border: map-get($map: $botonRedes, $key:bordeRedes);
 
-                        .subRedes:hover{//para que se agranden los cuadros de redes//
-                            transform:scale(1.19);
-                            transition: 1.5s;
-                        }
+                        font-size: $fontSizePromedioCelular+1px;
+
+                            &:hover{//para que se agranden los cuadros de redes//
+                                transform:scale(1.19);
+                                transition: 1.5s;
+                            }
                             
                         //los links a redes//
                         .links{
                             text-decoration: none;
                             list-style: none;
                             color: black;
-                            font-size: 11px;
+                            font-size: $fontSizePromedioCelular -1px;
 
                         }
                     }
@@ -189,8 +188,7 @@ body{
             .color-encabezado{
                 .imagen{
 
-                height: 100px;
-                width: 120px;
+                    @include tamaño(120px, 100px);
                 }
             
                 .palabrasEncabezado{//son los hipervinculos del encabezado, que se ponen espaciados//
@@ -199,12 +197,11 @@ body{
                     .nav-item{
 
                         padding: 0mm 3mm;
-                        border: 2px solid black;
-                        background-color: white;
-                        border-radius: 30px;
+                        border: map-get($map:$botonNav , $key: bordeNav);
+                        background-color: map-get($map:$botonNav , $key: fondoNav);
+                        border-radius: map-get($map:$botonNav , $key: radioNav);
 
-                        height: 80px;
-                        width: 120px ;
+                        @include tamaño(120px, 80px);
                         text-align: center;
                     }
                 }
@@ -212,56 +209,46 @@ body{
         }//fin encabezado//
         
         h1{
-            font-size: 36px;  
+            font-size: $fontSizePromedioTablet+16px;  
             padding: 0px;
 
         }
         h2{
-            font-size: 28px;
+            font-size: $fontSizePromedioTablet+8px;
             padding: 0px;
         }
 
         main{
 
-            height: 700px;
-            width: 500px;
+            @include tamaño(500px, 700px);
             .noticia{
 
                     margin: 16px 30px;
                     padding: 10px;
-                    font-size: 20px;
+                    font-size: $fontSizePromedioTablet;
                 }
         }
    
         footer{
             .pieDePagina{
                 margin-top: 30px;
-                font-size: 18px;
+                font-size: $fontSizePromedioTablet - 12px;
 
                 .subPieDePagina{ //los datos sobre ubicacion y numeros (todo menos redes)//
                     iframe{
-                        height: 250px;
-                        width: 500px;
+                        @include tamaño(500px, 250px);
                     }
                 }
 
                 .redes{//los links a redes sociales//
 
-                    display: flex;
-                    flex-flow: row wrap;
-                    justify-content: center;
-                    align-items: center;
-                    
-                    margin-left: auto;
-                    margin-right: auto;
-
                     .subRedes{
-                        width: 150px;
-                        height: 70px;
+
+                        @include tamaño(150px, 70px);
                             
                         //los links a redes//
                         .links{
-                            font-size: 16px;
+                            font-size: $fontSizePromedioTablet - 4px;
 
                         }
                     }
@@ -293,9 +280,7 @@ body{
             top: 5px;
             .color-encabezado{
                 .imagen{
-
-                    height: 150px;
-                    width: 170px;
+                    @include tamaño(170px, 150px);
                 }
             
                 .palabrasEncabezado{//son los hipervinculos del encabezado, que se ponen espaciados//
@@ -304,8 +289,8 @@ body{
                         text-align: center;
                         padding-left: 2mm;
                         margin: 4mm 5mm;
-                        height: 50px;
-                        width: 170px;
+
+                        @include tamaño(170px, 50px);
                     }
                 }
             }
@@ -320,7 +305,7 @@ body{
 
 
         h2{//inicio a noticias principales//
-            display: flex;
+            display: inline;
         
             width: 15cm; 
             margin: 5mm auto 1mm;
@@ -332,7 +317,7 @@ body{
             //quiero poner una foto de fondo para que no haya tanto espacio en la pagina, pero cunado la pongo la foto se pixelea o no alcanza con la distnacia (temporal)//
         .fondoMain{
 
-            background-color: blueviolet;
+            background-image: url(../imagenes/universidad.jpg);
             margin: 0cm 1cm;
             padding: 1mm 0mm 1mm;
             main{   //la hoja de noticias recientes//
@@ -341,8 +326,8 @@ body{
             
                 font-size: large;
             
-                height: 20cm;
-                width: 15cm;
+                @include tamaño(15cm, 20cm);
+
                 .noticia{       //segundo recuadro dentro de las noticias//
 
                     margin: 1cm;
@@ -363,26 +348,13 @@ body{
                     .subPieDePagina{    //los datos sobre ubicacion y numeros (todo menos redes)//
                         padding: 1.3mm;
                         iframe{
-                            height: 300px;
-                            width: 600px;
+                            @include tamaño(600px, 300px);
                         }
                     }   
 
                 .redes{    //los links a redes sociales//
-
-                    display: flex;
-                    flex-flow: row wrap;
-                    justify-content: center;
-                    align-items: center;
-                    
-                    margin-left: auto;
-                    margin-right: auto;
-
-                    
-                    .subRedes{      //los contenedores de fotos//
-                        width: 4cm;
-                        height: 1.8cm;
-    
+                    .subRedes{      //los contenedores de redes//
+                        @include tamaño(4cm, 1.8cm);
                         
                         .links{     //los links a redes//
                             font-size: 17px;
