--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -9,15 +9,16 @@
 }
 
 body{
-    background-image: linear-gradient(to right, rgb(206, 222, 251), rgb(102, 153, 204));
+  background-image: url(../imagenes/fondo3.png);
     .contenedor{
 
         display: grid;
     
         grid-template-areas: "header "
                              "h1   "
-                             "h2     "
+                             "h2     "  
                              "main  "
+                             "flecha"
                              "footer ";
         header{
             //para que este sobre toda la pagina//
@@ -59,14 +60,27 @@ body{
             grid-area: h1;
             text-align: center;
             font-family:'Times New Roman', Times, serif;
-            font-size: $fontSizePromedioCelular+11px;  
+            font-size: $fontSizePromedioCelular+11px; 
+            margin-top: 5px; 
+
+            background-color: rgb(212, 234, 252);
+            display:inline;
+            padding-left:1px;
+            padding-right: 1px;
+            @include autoEmparejamiento;
         }
         h2{
         
             grid-area: h2;
             text-align: center;
             font-family:'Times New Roman', Times, serif;
-            font-size: $fontSizePromedioCelular+4px;
+            font-size: $fontSizePromedioCelular+6px;
+
+            background-color: aliceblue;
+            display:inline;
+            padding-left:10px;
+            padding-right: 10px;
+            @include autoEmparejamiento;
         }
         main{
             grid-area: main;
@@ -95,19 +109,28 @@ body{
             }
         }//fin de las noticias recientes//
 
-        /*todavia falta
+        /*flecha que manda para arriba*/
         .moverInicio{
-            position: sticky;
-            z-index: 1;
-            margin: 10cm;
-            background-color: aliceblue;
-        }*/
+            grid-area: flecha;
+            
+            .flecha{
+                @include tamaño(45px, 45px);
+                border-radius: 50px;
+                border: 3px ridge black;
+                position:fixed;
+                z-index: 1;
+                top: 85%;
+                margin-left: 87%;
+                margin-right: 5px;
+                padding: 0px;
+            }
+        }
+
+
         /*Pie de pagina*/
-
-
         footer{
             grid-area: footer;
-            
+            margin-top: 10px;
             .pieDePagina{//lo que no es redes//
 
                 display: flex;
@@ -195,8 +218,8 @@ body{
 
                     justify-content: space-around ;
                     .nav-item{
-
-                        padding: 0mm 3mm;
+                        @include flexCentroCentro;
+                        padding: 1mm 3mm;
                         border: map-get($map:$botonNav , $key: bordeNav);
                         background-color: map-get($map:$botonNav , $key: fondoNav);
                         border-radius: map-get($map:$botonNav , $key: radioNav);
@@ -228,11 +251,21 @@ body{
                     font-size: $fontSizePromedioTablet;
                 }
         }
+
+        .moverInicio{
+            .flecha{
+                @include tamaño(60px, 60px);
+                border: 2px ridge black;
+                top: 88%;
+                margin-left: 87%;
+                margin-right: 5px;
+            }
+        }
    
         footer{
             .pieDePagina{
                 margin-top: 30px;
-                font-size: $fontSizePromedioTablet - 12px;
+                font-size: $fontSizePromedioTablet - 2px;
 
                 .subPieDePagina{ //los datos sobre ubicacion y numeros (todo menos redes)//
                     iframe{
@@ -285,12 +318,10 @@ body{
             
                 .palabrasEncabezado{//son los hipervinculos del encabezado, que se ponen espaciados//
                     .nav-item{
-
-                        text-align: center;
                         padding-left: 2mm;
                         margin: 4mm 5mm;
 
-                        @include tamaño(170px, 50px);
+                        @include tamaño(180px, 60px);
                     }
                 }
             }
@@ -298,8 +329,12 @@ body{
         
 
         h1{// el titulo de inicio//
+            background-color: aliceblue;
+            display:inline;
             font-size: 1cm;  
-            padding: 0px;
+            padding-left:10px;
+            padding-right: 10px;
+            @include autoEmparejamiento;
 
         }
 
@@ -317,7 +352,9 @@ body{
             //quiero poner una foto de fondo para que no haya tanto espacio en la pagina, pero cunado la pongo la foto se pixelea o no alcanza con la distnacia (temporal)//
         .fondoMain{
 
-            background-image: url(../imagenes/universidad.jpg);
+        //    background-image: url(../imagenes/fondo3.png);
+            background-repeat:repeat;
+
             margin: 0cm 1cm;
             padding: 1mm 0mm 1mm;
             main{   //la hoja de noticias recientes//
@@ -336,6 +373,12 @@ body{
             }
         }
     
+        //saco la flecha porque la pagina ya es corta como para tener una redireccion
+        .moverInicio{
+            .flecha{
+                display:none;
+            }
+        }
 
         footer{
 
@@ -366,4 +409,4 @@ body{
         }
     }
 } 
-}/*fin de quering para tablets*/
+}/*fin de quering para computadoras*/
